@@ -12,6 +12,7 @@ version <next>
 - Shorten audio decoder
 - LOCO video decoder
 - Apple Lossless Audio Codec (ALAC) decoder 
+- Winnov WNV1 video decoder
 
 version 0.4.9-pre1:
 
